// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
  style={
    Object {
      "WebkitAlignSelf": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(255,255,255,1)",
      "borderBottomColor": "rgba(189,193,204,1)",
      "borderBottomWidth": "1px",
      "borderLeftColor": "rgba(189,193,204,1)",
      "borderLeftWidth": "1px",
      "borderRightColor": "rgba(189,193,204,1)",
      "borderRightWidth": "1px",
      "borderTopColor": "rgba(189,193,204,1)",
      "borderTopWidth": "1px",
      "height": "46px",
      "msFlexItemAlign": "stretch",
    }
  }
>
  <input
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect="on"
    className="rn-MozAppearance-97bpaa rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-boxSizing-deolkf rn-fontFamily-14xgk7a rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingBottom-1mdbw0j rn-resize-1dz5y72"
    dir="auto"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onSelect={[Function]}
    readOnly={false}
    spellCheck={true}
    style={
      Object {
        "WebkitAlignSelf": "stretch",
        "alignSelf": "stretch",
        "borderBottomColor": "transparent",
        "borderBottomWidth": "1px",
        "borderLeftColor": "transparent",
        "borderLeftWidth": "1px",
        "borderRightColor": "transparent",
        "borderRightWidth": "1px",
        "borderTopColor": "transparent",
        "borderTopWidth": "1px",
        "color": "rgba(189,193,204,1)",
        "height": "46px",
        "msFlexItemAlign": "stretch",
        "paddingLeft": "12px",
        "paddingRight": "6px",
      }
    }
    type="text"
    value="Your name"
  />
</div>
`;

exports[`should render disabled 1`] = `
<div
  className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
  style={
    Object {
      "WebkitAlignSelf": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(255,255,255,1)",
      "borderBottomColor": "rgba(189,193,204,1)",
      "borderBottomWidth": "1px",
      "borderLeftColor": "rgba(189,193,204,1)",
      "borderLeftWidth": "1px",
      "borderRightColor": "rgba(189,193,204,1)",
      "borderRightWidth": "1px",
      "borderTopColor": "rgba(189,193,204,1)",
      "borderTopWidth": "1px",
      "height": "46px",
      "msFlexItemAlign": "stretch",
      "opacity": 0.2,
    }
  }
>
  <input
    autoCapitalize="sentences"
    autoComplete="on"
    autoCorrect="on"
    className="rn-MozAppearance-97bpaa rn-appearance-30o5oe rn-backgroundColor-wib322 rn-borderTopLeftRadius-ou6ah9 rn-borderTopRightRadius-t12b5v rn-borderBottomRightRadius-zmljjp rn-borderBottomLeftRadius-pm2fo rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-boxSizing-deolkf rn-fontFamily-14xgk7a rn-fontSize-1b43r93 rn-paddingTop-wk8lta rn-paddingBottom-1mdbw0j rn-resize-1dz5y72"
    dir="auto"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onSelect={[Function]}
    readOnly={true}
    spellCheck={true}
    style={
      Object {
        "WebkitAlignSelf": "stretch",
        "alignSelf": "stretch",
        "borderBottomColor": "transparent",
        "borderBottomWidth": "1px",
        "borderLeftColor": "transparent",
        "borderLeftWidth": "1px",
        "borderRightColor": "transparent",
        "borderRightWidth": "1px",
        "borderTopColor": "transparent",
        "borderTopWidth": "1px",
        "color": "rgba(189,193,204,1)",
        "height": "46px",
        "msFlexItemAlign": "stretch",
        "paddingLeft": "12px",
        "paddingRight": "6px",
      }
    }
    type="text"
    value="Your name"
  />
</div>
`;
